# serializer version: 1
# name: TestDTWSequenceMetric.test_collect_as_dict_equivalence_with_snapshot[event]
  dict({
    tuple(
      1,
      1,
    ): 11.0,
    tuple(
      1,
      2,
    ): 16.0,
    tuple(
      1,
      3,
    ): 13.0,
    tuple(
      1,
      4,
    ): 11.0,
    tuple(
      1,
      5,
    ): 18.0,
    tuple(
      1,
      6,
    ): 13.0,
    tuple(
      1,
      7,
    ): 7.0,
    tuple(
      1,
      8,
    ): 8.0,
    tuple(
      1,
      9,
    ): 7.0,
    tuple(
      1,
      10,
    ): 11.0,
    tuple(
      2,
      1,
    ): 11.0,
    tuple(
      2,
      2,
    ): 12.0,
    tuple(
      2,
      3,
    ): 12.0,
    tuple(
      2,
      4,
    ): 9.0,
    tuple(
      2,
      5,
    ): 18.0,
    tuple(
      2,
      6,
    ): 12.0,
    tuple(
      2,
      7,
    ): 7.0,
    tuple(
      2,
      8,
    ): 8.0,
    tuple(
      2,
      9,
    ): 7.0,
    tuple(
      2,
      10,
    ): 11.0,
    tuple(
      3,
      1,
    ): 11.0,
    tuple(
      3,
      2,
    ): 16.0,
    tuple(
      3,
      3,
    ): 11.0,
    tuple(
      3,
      4,
    ): 10.0,
    tuple(
      3,
      5,
    ): 18.0,
    tuple(
      3,
      6,
    ): 12.0,
    tuple(
      3,
      7,
    ): 5.0,
    tuple(
      3,
      8,
    ): 8.0,
    tuple(
      3,
      9,
    ): 6.0,
    tuple(
      3,
      10,
    ): 11.0,
    tuple(
      4,
      1,
    ): 11.0,
    tuple(
      4,
      2,
    ): 15.0,
    tuple(
      4,
      3,
    ): 12.0,
    tuple(
      4,
      4,
    ): 8.0,
    tuple(
      4,
      5,
    ): 15.0,
    tuple(
      4,
      6,
    ): 12.0,
    tuple(
      4,
      7,
    ): 7.0,
    tuple(
      4,
      8,
    ): 8.0,
    tuple(
      4,
      9,
    ): 6.0,
    tuple(
      4,
      10,
    ): 11.0,
    tuple(
      5,
      1,
    ): 11.0,
    tuple(
      5,
      2,
    ): 14.0,
    tuple(
      5,
      3,
    ): 13.0,
    tuple(
      5,
      4,
    ): 11.0,
    tuple(
      5,
      5,
    ): 15.0,
    tuple(
      5,
      6,
    ): 13.0,
    tuple(
      5,
      7,
    ): 7.0,
    tuple(
      5,
      8,
    ): 8.0,
    tuple(
      5,
      9,
    ): 7.0,
    tuple(
      5,
      10,
    ): 11.0,
    tuple(
      6,
      1,
    ): 10.0,
    tuple(
      6,
      2,
    ): 16.0,
    tuple(
      6,
      3,
    ): 11.0,
    tuple(
      6,
      4,
    ): 9.0,
    tuple(
      6,
      5,
    ): 17.0,
    tuple(
      6,
      6,
    ): 11.0,
    tuple(
      6,
      7,
    ): 7.0,
    tuple(
      6,
      8,
    ): 8.0,
    tuple(
      6,
      9,
    ): 7.0,
    tuple(
      6,
      10,
    ): 11.0,
    tuple(
      7,
      1,
    ): 11.0,
    tuple(
      7,
      2,
    ): 16.0,
    tuple(
      7,
      3,
    ): 13.0,
    tuple(
      7,
      4,
    ): 11.0,
    tuple(
      7,
      5,
    ): 18.0,
    tuple(
      7,
      6,
    ): 13.0,
    tuple(
      7,
      7,
    ): 6.0,
    tuple(
      7,
      8,
    ): 8.0,
    tuple(
      7,
      9,
    ): 7.0,
    tuple(
      7,
      10,
    ): 11.0,
    tuple(
      8,
      1,
    ): 11.0,
    tuple(
      8,
      2,
    ): 16.0,
    tuple(
      8,
      3,
    ): 13.0,
    tuple(
      8,
      4,
    ): 11.0,
    tuple(
      8,
      5,
    ): 18.0,
    tuple(
      8,
      6,
    ): 13.0,
    tuple(
      8,
      7,
    ): 7.0,
    tuple(
      8,
      8,
    ): 8.0,
    tuple(
      8,
      9,
    ): 7.0,
    tuple(
      8,
      10,
    ): 11.0,
    tuple(
      9,
      1,
    ): 11.0,
    tuple(
      9,
      2,
    ): 15.0,
    tuple(
      9,
      3,
    ): 11.0,
    tuple(
      9,
      4,
    ): 10.0,
    tuple(
      9,
      5,
    ): 18.0,
    tuple(
      9,
      6,
    ): 13.0,
    tuple(
      9,
      7,
    ): 7.0,
    tuple(
      9,
      8,
    ): 7.0,
    tuple(
      9,
      9,
    ): 5.0,
    tuple(
      9,
      10,
    ): 11.0,
    tuple(
      10,
      1,
    ): 11.0,
    tuple(
      10,
      2,
    ): 16.0,
    tuple(
      10,
      3,
    ): 13.0,
    tuple(
      10,
      4,
    ): 10.0,
    tuple(
      10,
      5,
    ): 18.0,
    tuple(
      10,
      6,
    ): 13.0,
    tuple(
      10,
      7,
    ): 7.0,
    tuple(
      10,
      8,
    ): 8.0,
    tuple(
      10,
      9,
    ): 7.0,
    tuple(
      10,
      10,
    ): 9.0,
  })
# ---
# name: TestDTWSequenceMetric.test_collect_as_dict_equivalence_with_snapshot[interval]
  dict({
    tuple(
      1,
      1,
    ): 4.0,
    tuple(
      1,
      2,
    ): 6.0,
    tuple(
      1,
      3,
    ): 3.0,
    tuple(
      1,
      4,
    ): 6.0,
    tuple(
      1,
      5,
    ): 6.0,
    tuple(
      1,
      6,
    ): 7.0,
    tuple(
      1,
      7,
    ): 3.0,
    tuple(
      1,
      8,
    ): 7.0,
    tuple(
      1,
      9,
    ): 4.0,
    tuple(
      1,
      10,
    ): 4.0,
    tuple(
      2,
      1,
    ): 5.0,
    tuple(
      2,
      2,
    ): 5.0,
    tuple(
      2,
      3,
    ): 3.0,
    tuple(
      2,
      4,
    ): 6.0,
    tuple(
      2,
      5,
    ): 5.0,
    tuple(
      2,
      6,
    ): 6.0,
    tuple(
      2,
      7,
    ): 3.0,
    tuple(
      2,
      8,
    ): 7.0,
    tuple(
      2,
      9,
    ): 4.0,
    tuple(
      2,
      10,
    ): 3.0,
    tuple(
      3,
      1,
    ): 5.0,
    tuple(
      3,
      2,
    ): 6.0,
    tuple(
      3,
      3,
    ): 2.0,
    tuple(
      3,
      4,
    ): 6.0,
    tuple(
      3,
      5,
    ): 6.0,
    tuple(
      3,
      6,
    ): 7.0,
    tuple(
      3,
      7,
    ): 3.0,
    tuple(
      3,
      8,
    ): 7.0,
    tuple(
      3,
      9,
    ): 4.0,
    tuple(
      3,
      10,
    ): 4.0,
    tuple(
      4,
      1,
    ): 5.0,
    tuple(
      4,
      2,
    ): 6.0,
    tuple(
      4,
      3,
    ): 3.0,
    tuple(
      4,
      4,
    ): 5.0,
    tuple(
      4,
      5,
    ): 6.0,
    tuple(
      4,
      6,
    ): 7.0,
    tuple(
      4,
      7,
    ): 2.0,
    tuple(
      4,
      8,
    ): 7.0,
    tuple(
      4,
      9,
    ): 4.0,
    tuple(
      4,
      10,
    ): 3.0,
    tuple(
      5,
      1,
    ): 5.0,
    tuple(
      5,
      2,
    ): 6.0,
    tuple(
      5,
      3,
    ): 3.0,
    tuple(
      5,
      4,
    ): 6.0,
    tuple(
      5,
      5,
    ): 5.0,
    tuple(
      5,
      6,
    ): 7.0,
    tuple(
      5,
      7,
    ): 3.0,
    tuple(
      5,
      8,
    ): 7.0,
    tuple(
      5,
      9,
    ): 4.0,
    tuple(
      5,
      10,
    ): 4.0,
    tuple(
      6,
      1,
    ): 5.0,
    tuple(
      6,
      2,
    ): 6.0,
    tuple(
      6,
      3,
    ): 3.0,
    tuple(
      6,
      4,
    ): 6.0,
    tuple(
      6,
      5,
    ): 6.0,
    tuple(
      6,
      6,
    ): 6.0,
    tuple(
      6,
      7,
    ): 3.0,
    tuple(
      6,
      8,
    ): 7.0,
    tuple(
      6,
      9,
    ): 4.0,
    tuple(
      6,
      10,
    ): 4.0,
    tuple(
      7,
      1,
    ): 5.0,
    tuple(
      7,
      2,
    ): 6.0,
    tuple(
      7,
      3,
    ): 3.0,
    tuple(
      7,
      4,
    ): 5.0,
    tuple(
      7,
      5,
    ): 6.0,
    tuple(
      7,
      6,
    ): 7.0,
    tuple(
      7,
      7,
    ): 2.0,
    tuple(
      7,
      8,
    ): 7.0,
    tuple(
      7,
      9,
    ): 4.0,
    tuple(
      7,
      10,
    ): 3.0,
    tuple(
      8,
      1,
    ): 5.0,
    tuple(
      8,
      2,
    ): 6.0,
    tuple(
      8,
      3,
    ): 3.0,
    tuple(
      8,
      4,
    ): 6.0,
    tuple(
      8,
      5,
    ): 6.0,
    tuple(
      8,
      6,
    ): 7.0,
    tuple(
      8,
      7,
    ): 3.0,
    tuple(
      8,
      8,
    ): 5.0,
    tuple(
      8,
      9,
    ): 4.0,
    tuple(
      8,
      10,
    ): 4.0,
    tuple(
      9,
      1,
    ): 5.0,
    tuple(
      9,
      2,
    ): 5.0,
    tuple(
      9,
      3,
    ): 3.0,
    tuple(
      9,
      4,
    ): 6.0,
    tuple(
      9,
      5,
    ): 6.0,
    tuple(
      9,
      6,
    ): 7.0,
    tuple(
      9,
      7,
    ): 3.0,
    tuple(
      9,
      8,
    ): 7.0,
    tuple(
      9,
      9,
    ): 3.0,
    tuple(
      9,
      10,
    ): 4.0,
    tuple(
      10,
      1,
    ): 5.0,
    tuple(
      10,
      2,
    ): 5.0,
    tuple(
      10,
      3,
    ): 3.0,
    tuple(
      10,
      4,
    ): 6.0,
    tuple(
      10,
      5,
    ): 5.0,
    tuple(
      10,
      6,
    ): 6.0,
    tuple(
      10,
      7,
    ): 3.0,
    tuple(
      10,
      8,
    ): 7.0,
    tuple(
      10,
      9,
    ): 4.0,
    tuple(
      10,
      10,
    ): 3.0,
  })
# ---
# name: TestDTWSequenceMetric.test_collect_as_dict_equivalence_with_snapshot[state]
  dict({
    tuple(
      1,
      1,
    ): 2.0,
    tuple(
      1,
      2,
    ): 2.0,
    tuple(
      1,
      3,
    ): 3.0,
    tuple(
      1,
      4,
    ): 4.0,
    tuple(
      1,
      5,
    ): 2.0,
    tuple(
      1,
      6,
    ): 4.0,
    tuple(
      1,
      7,
    ): 4.0,
    tuple(
      1,
      8,
    ): 2.0,
    tuple(
      1,
      9,
    ): 2.0,
    tuple(
      1,
      10,
    ): 2.0,
    tuple(
      2,
      1,
    ): 2.0,
    tuple(
      2,
      2,
    ): 1.0,
    tuple(
      2,
      3,
    ): 3.0,
    tuple(
      2,
      4,
    ): 4.0,
    tuple(
      2,
      5,
    ): 2.0,
    tuple(
      2,
      6,
    ): 4.0,
    tuple(
      2,
      7,
    ): 4.0,
    tuple(
      2,
      8,
    ): 2.0,
    tuple(
      2,
      9,
    ): 2.0,
    tuple(
      2,
      10,
    ): 2.0,
    tuple(
      3,
      1,
    ): 2.0,
    tuple(
      3,
      2,
    ): 2.0,
    tuple(
      3,
      3,
    ): 2.0,
    tuple(
      3,
      4,
    ): 4.0,
    tuple(
      3,
      5,
    ): 2.0,
    tuple(
      3,
      6,
    ): 4.0,
    tuple(
      3,
      7,
    ): 4.0,
    tuple(
      3,
      8,
    ): 2.0,
    tuple(
      3,
      9,
    ): 2.0,
    tuple(
      3,
      10,
    ): 2.0,
    tuple(
      4,
      1,
    ): 2.0,
    tuple(
      4,
      2,
    ): 2.0,
    tuple(
      4,
      3,
    ): 3.0,
    tuple(
      4,
      4,
    ): 4.0,
    tuple(
      4,
      5,
    ): 2.0,
    tuple(
      4,
      6,
    ): 4.0,
    tuple(
      4,
      7,
    ): 4.0,
    tuple(
      4,
      8,
    ): 2.0,
    tuple(
      4,
      9,
    ): 2.0,
    tuple(
      4,
      10,
    ): 2.0,
    tuple(
      5,
      1,
    ): 2.0,
    tuple(
      5,
      2,
    ): 2.0,
    tuple(
      5,
      3,
    ): 3.0,
    tuple(
      5,
      4,
    ): 4.0,
    tuple(
      5,
      5,
    ): 1.0,
    tuple(
      5,
      6,
    ): 4.0,
    tuple(
      5,
      7,
    ): 4.0,
    tuple(
      5,
      8,
    ): 2.0,
    tuple(
      5,
      9,
    ): 2.0,
    tuple(
      5,
      10,
    ): 2.0,
    tuple(
      6,
      1,
    ): 2.0,
    tuple(
      6,
      2,
    ): 2.0,
    tuple(
      6,
      3,
    ): 3.0,
    tuple(
      6,
      4,
    ): 4.0,
    tuple(
      6,
      5,
    ): 1.0,
    tuple(
      6,
      6,
    ): 3.0,
    tuple(
      6,
      7,
    ): 4.0,
    tuple(
      6,
      8,
    ): 2.0,
    tuple(
      6,
      9,
    ): 1.0,
    tuple(
      6,
      10,
    ): 2.0,
    tuple(
      7,
      1,
    ): 2.0,
    tuple(
      7,
      2,
    ): 2.0,
    tuple(
      7,
      3,
    ): 3.0,
    tuple(
      7,
      4,
    ): 4.0,
    tuple(
      7,
      5,
    ): 2.0,
    tuple(
      7,
      6,
    ): 4.0,
    tuple(
      7,
      7,
    ): 3.0,
    tuple(
      7,
      8,
    ): 2.0,
    tuple(
      7,
      9,
    ): 2.0,
    tuple(
      7,
      10,
    ): 2.0,
    tuple(
      8,
      1,
    ): 2.0,
    tuple(
      8,
      2,
    ): 2.0,
    tuple(
      8,
      3,
    ): 3.0,
    tuple(
      8,
      4,
    ): 4.0,
    tuple(
      8,
      5,
    ): 2.0,
    tuple(
      8,
      6,
    ): 4.0,
    tuple(
      8,
      7,
    ): 4.0,
    tuple(
      8,
      8,
    ): 2.0,
    tuple(
      8,
      9,
    ): 2.0,
    tuple(
      8,
      10,
    ): 2.0,
    tuple(
      9,
      1,
    ): 2.0,
    tuple(
      9,
      2,
    ): 2.0,
    tuple(
      9,
      3,
    ): 3.0,
    tuple(
      9,
      4,
    ): 4.0,
    tuple(
      9,
      5,
    ): 2.0,
    tuple(
      9,
      6,
    ): 4.0,
    tuple(
      9,
      7,
    ): 4.0,
    tuple(
      9,
      8,
    ): 2.0,
    tuple(
      9,
      9,
    ): 2.0,
    tuple(
      9,
      10,
    ): 2.0,
    tuple(
      10,
      1,
    ): 2.0,
    tuple(
      10,
      2,
    ): 2.0,
    tuple(
      10,
      3,
    ): 2.0,
    tuple(
      10,
      4,
    ): 3.0,
    tuple(
      10,
      5,
    ): 2.0,
    tuple(
      10,
      6,
    ): 4.0,
    tuple(
      10,
      7,
    ): 4.0,
    tuple(
      10,
      8,
    ): 2.0,
    tuple(
      10,
      9,
    ): 2.0,
    tuple(
      10,
      10,
    ): 1.0,
  })
# ---
# name: TestDTWSequenceMetric.test_collect_as_matrix_equivalence_with_snapshot[event]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,11.0,16.0,13.0,11.0,18.0,13.0,7.0,8.0,7.0,11.0
  2,11.0,12.0,12.0,9.0,18.0,12.0,7.0,8.0,7.0,11.0
  3,11.0,16.0,11.0,10.0,18.0,12.0,5.0,8.0,6.0,11.0
  4,11.0,15.0,12.0,8.0,15.0,12.0,7.0,8.0,6.0,11.0
  5,11.0,14.0,13.0,11.0,15.0,13.0,7.0,8.0,7.0,11.0
  6,10.0,16.0,11.0,9.0,17.0,11.0,7.0,8.0,7.0,11.0
  7,11.0,16.0,13.0,11.0,18.0,13.0,6.0,8.0,7.0,11.0
  8,11.0,16.0,13.0,11.0,18.0,13.0,7.0,8.0,7.0,11.0
  9,11.0,15.0,11.0,10.0,18.0,13.0,7.0,7.0,5.0,11.0
  10,11.0,16.0,13.0,10.0,18.0,13.0,7.0,8.0,7.0,9.0
  
  '''
# ---
# name: TestDTWSequenceMetric.test_collect_as_matrix_equivalence_with_snapshot[interval]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,4.0,6.0,3.0,6.0,6.0,7.0,3.0,7.0,4.0,4.0
  2,5.0,5.0,3.0,6.0,5.0,6.0,3.0,7.0,4.0,3.0
  3,5.0,6.0,2.0,6.0,6.0,7.0,3.0,7.0,4.0,4.0
  4,5.0,6.0,3.0,5.0,6.0,7.0,2.0,7.0,4.0,3.0
  5,5.0,6.0,3.0,6.0,5.0,7.0,3.0,7.0,4.0,4.0
  6,5.0,6.0,3.0,6.0,6.0,6.0,3.0,7.0,4.0,4.0
  7,5.0,6.0,3.0,5.0,6.0,7.0,2.0,7.0,4.0,3.0
  8,5.0,6.0,3.0,6.0,6.0,7.0,3.0,5.0,4.0,4.0
  9,5.0,5.0,3.0,6.0,6.0,7.0,3.0,7.0,3.0,4.0
  10,5.0,5.0,3.0,6.0,5.0,6.0,3.0,7.0,4.0,3.0
  
  '''
# ---
# name: TestDTWSequenceMetric.test_collect_as_matrix_equivalence_with_snapshot[state]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,2.0,2.0,3.0,4.0,2.0,4.0,4.0,2.0,2.0,2.0
  2,2.0,1.0,3.0,4.0,2.0,4.0,4.0,2.0,2.0,2.0
  3,2.0,2.0,2.0,4.0,2.0,4.0,4.0,2.0,2.0,2.0
  4,2.0,2.0,3.0,4.0,2.0,4.0,4.0,2.0,2.0,2.0
  5,2.0,2.0,3.0,4.0,1.0,4.0,4.0,2.0,2.0,2.0
  6,2.0,2.0,3.0,4.0,1.0,3.0,4.0,2.0,1.0,2.0
  7,2.0,2.0,3.0,4.0,2.0,4.0,3.0,2.0,2.0,2.0
  8,2.0,2.0,3.0,4.0,2.0,4.0,4.0,2.0,2.0,2.0
  9,2.0,2.0,3.0,4.0,2.0,4.0,4.0,2.0,2.0,2.0
  10,2.0,2.0,2.0,3.0,2.0,4.0,4.0,2.0,2.0,1.0
  
  '''
# ---
